samples/v1alpha2-gateway.yaml
apiVersion: mesh.cellery.io/v1alpha2
kind: Gateway
metadata:
  name: gw1
spec:
  ingress:
    http:
      - context: /foo
        global: true
        authenticate: true
        port: 8080
        definitions:
          - path: /
            method: GET
        destination:
          host: google.com
          port: 80
    extensions:
      apiPublisher:
        authenticate: true
        context: /global
        version: 2.0.0
